# CC2_VSCODE

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
Include/: CC.h  MyClass.h  MyClass2.h
Sample-Test1/: test.cpp
Src/: CC.cpp  MyClass.cpp  MyClass2.cpp
